# Tactility

./: .gitignore  .gitmodules  CMakeLists.txt  CODING_STYLE.md  COPYRIGHT.md  README.md  lv_conf.h  sdkconfig.board.btt-panda-touch  sdkconfig.board.cl-32  sdkconfig.board.cyd-2432S022c  sdkconfig.board.cyd-2432s022c  sdkconfig.board.cyd-2432s024c  sdkconfig.board.cyd-2432s028r  sdkconfig.board.cyd-2432s028rv3  sdkconfig.board.cyd-2432s032c  sdkconfig.board.cyd-4848s040c  sdkconfig.board.cyd-8048s043c  sdkconfig.board.cyd-e32r28t  sdkconfig.board.cyd-e32r32p  sdkconfig.board.cyd-e32r35t  sdkconfig.board.cyd-e32r40t  sdkconfig.board.cyd-jc2432w328c  sdkconfig.board.cyd-jc3248w535c  sdkconfig.board.cyd-jc8048w550c  sdkconfig.board.elecrow-crowpanel-advance-28  sdkconfig.board.elecrow-crowpanel-advance-35  sdkconfig.board.elecrow-crowpanel-advance-50  sdkconfig.board.elecrow-crowpanel-basic-28  sdkconfig.board.elecrow-crowpanel-basic-35  sdkconfig.board.elecrow-crowpanel-basic-50  sdkconfig.board.heltec-v3  sdkconfig.board.heltec-wifi-lora-32-v3  sdkconfig.board.lilygo-tdeck  sdkconfig.board.lilygo-tdeck-pro  sdkconfig.board.lilygo-tdeck.dev  sdkconfig.board.lilygo-tdisplay  sdkconfig.board.lilygo-tdisplay-s3  sdkconfig.board.lilygo-tdongle-s3  sdkconfig.board.lilygo-tlora-pager  sdkconfig.board.m5stack-cardputer  (+13 more)
.github/workflows/: build-firmware.yml  build-sdk.yml  build-simulator.yml  build.yml  tests.yml  wipr.yml
App/: CMakeLists.txt  Kconfig
App/Source/: Boards.h  Main.cpp
Boards/: CMakeLists.txt
Boards/CYD-2432S022C/: CMakeLists.txt  CYD2432S022C.cpp
Boards/CYD-E32R32P/: CMakeLists.txt
Boards/CYD-E32R35T/: CMakeLists.txt
Boards/CYD-JC3248W535C/: CMakeLists.txt
Boards/CYD-JC3248W535C_WIP/: CMakeLists.txt
Boards/HeltecV3/: CMakeLists.txt
Boards/LilygoTdisplayS3/: CMakeLists.txt
Boards/WIP_waveshare-s3-touch-lcd-28/: CMakeLists.txt
Boards/WebSimulator/: index.html
Boards/cl-32/: CMakeLists.txt  device.properties
Boards/cyd-2432s022c/: CMakeLists.txt
Boards/lilygo-tdeck-pro/: device.properties
Boards/websimulator/: CMakeLists.txt
Boards/websimulator/Source/: Main.cpp
Buildscripts/: board.cmake  build-and-release-all.sh  build-wasm.sh  release-simulator.sh
Devices/WebSimulator/: serve.py
Devices/websimulator/: CMakeLists.txt
Devices/websimulator/Frontend/: index.html  serve.py
Devices/websimulator/Source/: FreeRTOSConfig.h  LvglTask.cpp  Main.cpp
Devices/websimulator/Source/hal/: SdlTouch.h
Documentation/: ideas.md
Firmware/: CMakeLists.txt  Kconfig  idf_component.yml
Firmware/Source/: Boards.h
Firmware/Source/Clock/: Clock.cpp
Firmware/Source/TactilityNews/: TactilityNews.cpp
Tactility/: CMakeLists.txt
TactilityCore/: README.md
Translations/: README.md
(+316 files in other folders)
